--- a/projects.html
+++ b/projects.html
@@ -4,153 +4,45 @@ title: Projects
 projects:
   - name: Web
     items:
-      - name: Writ
-        repo: programble/writ
-        tech: [CSS]
-        year: 2015
-        icon: fa-align-left
-        desc: Opinionated, classless styles for semantic HTML
-
-      - name: Discohands
-        repo: busbud/discohands
-        tech: [Node.js, MongoDB]
+      - name: Glim
+        repo: itsnauman/glim
+        tech: [Flask]
         year: 2014
-        icon: fa-comments
-        desc: Democratically choose topics to discuss
+        desc: Resize images on the fly using an API.
 
-      - name: Refheap
-        repo: Raynes/refheap
-        tech: [Clojure, MongoDB]
-        year: 2013–2014
-        icon: fa-paste
-        desc: '“The Reference Heap” pastebin'
+      - name: InstaiEtsy
+        repo: itsnauman/instaietsy
+        tech: [Flask]
+        year: 2015
+        desc: Etsy product recommendation based on instagram likes.
 
   - name: Libraries
     items:
-      - name: Errio
-        repo: programble/errio
-        tech: [Node.js]
+      - name: Postie
+        repo: itsnauman/postie
+        tech: [Python]
         year: 2015
-        icon: fa-exchange
-        desc: Error serialization and deserialization
+        desc: Utility for batch sending emails and text messages.
 
-      - name: SuperError
-        repo: busbud/super-error
-        tech: [JavaScript]
+      - name: Echo
+        repo: itsnauman/echo
+        tech: [Python]
         year: 2014
-        icon: fa-exclamation-triangle
-        desc: Easily subclass errors
+        desc: Decorator for retrying failing operations.
 
-      - name: Configru
-        repo: programble/configru
-        tech: [Ruby]
-        year: 2011–2013
-        icon: fa-cogs
-        desc: YAML configuration library
+      - name: Jumprun
+        repo: itsnauman/Jumprun
+        tech: [Python]
+        year: 2014
+        desc: Run scripts from anywhere in terminal with a single command.
 
-      - name: Hemp
-        repo: programble/hemp
-        tech: [JavaScript]
-        year: 2015
-        icon: fa-pencil
-        desc: Simple JavaScript string builder
-
-  - name: Development
-    items:
-      - name: Careen
-        repo: programble/careen
-        tech: [TypeScript]
-        year: 2015
-        icon: fa-database
-        desc: SQL schema migration manager
-
-      - name: Pult
-        repo: programble/pult
+      - name: Flup
+        repo: itsnauman/flup
         tech: [Node.js]
         year: 2014
-        icon: fa-terminal
-        desc: Access local servers on .dev domains
+        desc: Terminal based TCP chat server and client.
 
-      - name: Apricot
-        repo: apricot-lang/apricot
-        tech: [Ruby]
-        year: 2012–2013
-        icon: fa-code
-        desc: Clojure-like Lisp on Rubinius
 
-      - name: TypeNode
-        repo: programble/typenode
-        tech: [TypeScript]
-        year: 2015
-        icon: fa-tags
-        desc: TypeScript declarations for Node.js
-
-  - name: Games
-    items:
-      - name: Tetrasm
-        repo: programble/tetrasm
-        tech: [NASM]
-        year: 2015
-        icon: fa-gamepad
-        desc: Tetris for x86 in NASM
-
-      - name: Bare Metal Tetris
-        repo: programble/bare-metal-tetris
-        tech: [C]
-        year: 2014
-        icon: fa-gamepad
-        desc: Tetris for x86
-
-      - name: Letterwang
-        repo: programble/letterwang
-        tech: [Node.js, Socket.IO]
-        year: 2013
-        icon: fa-font
-        desc: Multiplayer word-spelling game
-
-  - name: Experiments
-    items:
-      - name: Gury
-        repo: programble/gury
-        tech: [Node.js]
-        year: 2015
-        icon: fa-picture-o
-        desc: Upload anything to imgur
-
-      - name: Caps
-        repo: programble/caps
-        tech: [Node.js]
-        year: 2014
-        icon: fa-cloud-upload
-        desc: Store any file on anonymous public services
-
-      - name: Forklimit
-        repo: programble/forklimit
-        tech: [C]
-        year: 2013
-        icon: fa-bomb
-        desc: Prevent fork-bombs
-
-      - name: Keyloog
-        repo: programble/keyloog
-        tech: [C]
-        year: 2011
-        icon: fa-keyboard-o
-        desc: Keylogger for X
-
-  - name: Configuration
-    items:
-      - name: Effuse
-        repo: programble/effuse
-        tech: [Ruby]
-        year: 2012–2013
-        icon: fa-file-text
-        desc: Tool for symlinking dotfiles
-
-      - name: Dotfiles
-        repo: programble/dotfiles
-        icon: fa-cog
-        desc: Configuration files for VIM, zsh, etc.
 ---
 
 <h2 class="text-center">Projects</h2>
