--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <a href="images/me.png" target="_blank">
       <img id="me" src="images/me.png" />
     </a>
-    <p>I'm a 19 year old software engineer studying Computer Science at New York University.</p>
+    <p>I'm a 19 year old software developer studying Computer Science at New York University.</p>
     <p>I'm obsessed with code quality, software architecture and building things.</p>
     <p>My favorite pastimes include playing video games, debugging code and building robots.</p>
-    <p>My latest resume is available <a href="https://www.dropbox.com/s/5iovdihypyxpk90/Resume.pdf?dl=0" target="_blank">here</a>. You can contact me at <a href="mailto:me@nauman.io">me@nauman.io</a>.</p>
+    <p>My resume is available <a href="https://www.dropbox.com/s/5iovdihypyxpk90/Resume.pdf?dl=0" target="_blank">here</a>. You can contact me at <a href="mailto:me@nauman.io">me@nauman.io</a>.</p>
     <ul class="social">
       <li><a href="https://github.com/itsnauman" target="_blank"><i class="fa fa-github"></i></a></li>
       <li><a href="https://twitter.com/itsnauman" target="_blank"><i class="fa fa-twitter"></i></a></li>
