--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
   <div class="container">
-    <h1>Hey there, I'm Nauman.</h1>
+    <h1>Hey there, I'm Nauman 😎</h1>
     <a href="images/me.png" target="_blank">
       <img id="me" src="images/me.png" />
     </a>
@@ -27,7 +27,7 @@
       <li><a href="https://facebook.com/itsnauman" target="_blank"><i class="fa fa-facebook"></i></a></li>
     </ul>
     
-    <blockquote id="footQuote" class="quote">"If you can dream it, you can do it."</blockquote>
+    <blockquote id="footQuote" class="quote">"If you can dream it, you can do it 🚀"</blockquote>
   </div>
   <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 </body>
