--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
   <div class="container">
-    <h1>Hey there, I'm Nauman 😎</h1>
+    <h1>Hey there, I'm Nauman 😃</h1>
     <a href="images/me.png" target="_blank">
       <img id="me" src="images/me.png" />
     </a>
