--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="https://github.com/itsnauman" target="_blank"><i class="fa fa-github"></i></a></li>
       <li><a href="https://twitter.com/itsnauman" target="_blank"><i class="fa fa-twitter"></i></a></li>
       <li><a href="https://facebook.com/itsnauman" target="_blank"><i class="fa fa-facebook"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/nauman-ahmad-7b3091b8" target="_blank"><i class="fa fa-linkedin"></i></a></li>
     </ul>
     
     <blockquote id="footQuote" class="quote">"If you can dream it, you can do it 🚀"</blockquote>
