--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
     <a href="images/me.png" target="_blank">
       <img id="me" src="images/me.png" />
     </a>
-    <p>I'm a 20 year old software developer studying Computer Science at New York University.</p>
-    <p>I'm obsessed with code quality, software architecture and building things.</p>
-    <p>My favorite pastimes include playing video games, debugging code and building robots.</p>
-    <p>My resume is available <a href="https://www.dropbox.com/s/tqz5grspy7id5cr/Resume%202019.pdf?dl=0" target="_blank">here</a>. You can contact me at <a href="mailto:me@nauman.io">me@nauman.io</a>.</p>
+    <p>I have no idea how you got here but let me tell you a little about myself.</p>
+    <p>I'm a 20 year old Software Engineer studying Computer Science and Business at New York University.</p>
+    <p>My goal is to build products that change peoples' lives while learning something new every day.</p>
+    <p>My resume is available <a href="https://www.dropbox.com/s/t9vbbgivlcidqr3/Resume%202019%20v2.pdf?dl=0" target="_blank">here</a>. You can contact me at <a href="mailto:me@nauman.io">me@nauman.io</a>.</p>
     <ul class="social">
       <li><a href="https://github.com/itsnauman" target="_blank"><i class="fa fa-github"></i></a></li>
-      <li><a href="https://twitter.com/itsnauman" target="_blank"><i class="fa fa-twitter"></i></a></li>
+      <li><a href="https://twitter.com/naumanio" target="_blank"><i class="fa fa-twitter"></i></a></li>
       <li><a href="https://facebook.com/itsnauman" target="_blank"><i class="fa fa-facebook"></i></a></li>
       <li><a href="https://www.linkedin.com/in/nauman-ahmad-7b3091b8" target="_blank"><i class="fa fa-linkedin"></i></a></li>
     </ul>
 
-    <blockquote id="footQuote" class="quote">"If you can dream it, you can do it 🚀"</blockquote>
+    <blockquote id="footQuote" class="quote">"The best way to predict the future iѕ to invent it. 🚀"</blockquote>
   </div>
   <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 </body>
