--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@ layout: default
     </ul>
 </div>
 
-<p id="landing-page-text">Hi! I have no idea how you got here but let me tell you a little about myself. My name is Nauman Ahmad and I'm interested in ⭐️ machine learning ⭐️ and ⭐️ data science⭐️ . Check out my <a href="/me">about me</a> to see what this is all about, or read some of my blog posts below.</p>
+<p id="landing-page-text">Hi! I have no idea how you got here but let me tell you a little about myself. My name is Nauman Ahmad and I'm interested in machine learning and data science. Check out my <a href="/me">about me</a> to see what this is all about, or read some of my blog posts below.</p>
 
 <div class="title">
-    <h1>✨ Machine Learning:</h1>
+    <h1>✨ Blog:</h1>
     <ul>
-        {% for post in site.categories.ml %}
+        {% for post in site.categories.etc %}
         <li>
             <span class="date">{{ post.date | date: '%Y %b %d' }}</span> - <a href="{{ post.url }}">{{ post.title }}</a>
         </li>
@@ -32,7 +32,7 @@ layout: default
     </ul>
 </div>
 
-<div class="title">
+<!-- <div class="title">
     <h1>✨ Data Science:</h1>
     <ul>
         {% for post in site.categories.ds %}
@@ -53,3 +53,4 @@ layout: default
         {% endfor %}
     </ul>
 </div>
+ -->
